Fixing inference bug with .fold like methods